Add answers to interview question sets